--- a/index css/index.css
+++ b/index css/index.css
@@ -56,8 +56,8 @@ a{
     position:fixed;
     top:0;
     left:0;
-    width:100vw;
-    height:100vh;
+    width:calc(100%);
+    height:calc(100vh);
     background-image:url(../img/overlay.gif);
     background-size:250px;
     pointer-events: none;
@@ -67,14 +67,10 @@ a{
 
 /*------------------------------ .loading ------------------------------*/
 .loading{
-    justify-content:center;
-    align-items:center;
     width:100%;
     height:100%;
     background:#EEEEEE;
     position:fixed;
-    left:0;
-    top:0;
     z-index: 400;
 }
 .intro{
@@ -84,46 +80,37 @@ a{
     top:calc(50% - 60px);
     left:calc(50% - 90px);
 }
-.intro > .logo-svg > circle{
+.intro .logo-svg circle{
     stroke:#393E46;
     stroke-width:2px;
     fill:none;
 }
 .intro-txt{
-    width:100%;
     position:absolute;
     top:49%;
     left:6%;
     transform:translateY(-50%);
 }
-.intro-txt > span{
-    display:inline-block;
+.intro-txt span{
     font-size:10px;
     margin-right:6px;
 }
-.intro-txt > span:nth-child(2){
+.intro-txt span:nth-child(2){
     color:#fff;
 }
 
 /*------------------------------ header ------------------------------*/
 header{
-    width:100vw;
+    width:calc(100%);
     height:70px;
+    padding:15px 20px;
     position:fixed;
-    top:0;
-    left:0;
     z-index:300;
+    display:flex;
+    justify-content:space-between;
 }
 header.on{
     background-color:#eee;
-}
-header > .inner-wrap{
-    width:95%;
-    margin:auto;
-    padding:15px 0;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
 }
 .logo{
     width:60px;
@@ -145,54 +132,44 @@ header > .inner-wrap{
 .logo > .logo-svg.on > path{
     fill:#eee;
 }
-nav{
-    width:120px;
-    height:40px;
-    text-align:center;
-}
 nav ul{
     width:120px;
-    height:40px;
-    margin:auto;
     position:relative;
+    text-align:center;
 }
 nav li{
     width:100%;
     height:40px;
-    margin-bottom:8px;
+    margin-bottom:10px;
     position:absolute;
-    left:0;
-    top:0;
     background-color:#eee;
-    border:1.3px solid #393E46;
+    border:1px solid #393E46;
     border-radius:50px;
     transition:background-color 0.5s;
-}
-nav li.on{
-    background-color:#393E46;
-    border:1px solid #eee;
 }
 nav li:hover{
     background-color:#393E46;
 }
+nav li.on{
+    background-color:#222831;
+    border:1px solid #eee;
+}
 nav li.on:hover{
     background-color:#eee;
 }
-nav li > a{
-    font-size:1rem;
-    font-weight:400;
+nav li a{
     color:#393E46;
     line-height:40px;
     padding:15px;
     transition:color 0.5s;
 }
-nav li.on > a{
+nav li a:hover{
     color:#eee;
 }
-nav li > a:hover{
+nav li.on a{
     color:#eee;
 }
-nav li.on:hover > a{
+nav li.on:hover a{
     color:#393E46;
 }
 .projects{
@@ -204,19 +181,15 @@ nav li.on:hover > a{
 
 /*------------------------------ home ------------------------------*/
 section.home{
-    width:100vw;
-    height:100vh;
+    width:calc(100%);
+    height:calc(100vh);
 }
 .home-txt{
-    width:738px;
-    padding:0 10px;
+    width:718px;
     position:relative;
     left:50%;
     top:50%;
     transform:translate(-50%, -50%);
-    text-align:center;
-    font-family: 'indivisible', sans-serif;
-    text-align:left;
 }
 .home-txt > span{
     display:block;
@@ -239,14 +212,10 @@ section.home{
     color:#00ADB5;
 }
 .scroll{
-    width:95%;
-    height:40px;
     position:absolute;
-    left:2vw;
-    bottom:3vw;
+    left:15px;
+    bottom:20px;
     display:flex;
-    justify-content:flex-start;
-    align-items: center;
 }
 .arrow{
     width:40px;
@@ -256,7 +225,7 @@ section.home{
     fill:none;
 }
 .scroll-txt{
-    width:170px;
+    width:200px;
     height:40px;
     margin-left:10px;
     border:1.5px solid #393E46;
@@ -264,21 +233,20 @@ section.home{
     overflow:hidden;
 }
 .scroll-txt-wrap{
-    width:300px;
+    width:490px;
     position:relative;
     display:flex;
     justify-content: space-between;
 }
 .scroll-txt-wrap p{
-    width:150px;
+    width:160px;
     color:#393E46;
     font-size:1.2rem;
-    font-weight:400;
     line-height:37px;
 }
 @media all and (max-width:800px){
     .home-txt{
-        width:522px;
+        width:502px;
     }
     .home-txt p{
         font-size:3.5rem;
@@ -286,7 +254,7 @@ section.home{
 }
 @media all and (max-width:600px){
     .home-txt{
-        width:364px;
+        width:344px;
     }
     .home-txt p{
         font-size:2.4rem;
@@ -300,34 +268,29 @@ main{
 }
 main > section{
     width:100%;
-    margin-bottom:80px;
+    margin-bottom:120px;
 }
 main h2{
     font-size:4rem;
-    font-weight:700;
     color:#393E46;
-    margin-top:50px;
-    margin-bottom:10px;
 }
 .img-box{
     width:100%;
-    height:65vh;
+    height:580px;
     overflow:hidden;
     position:relative;
-}
-.img-box a{
-    color:#eee;
 }
 .img-cover{
     width:100%;
     height:100%;
     background-color:rgba(57, 62, 70,0.8);
-    position:absolute;
-    left:0;
-    top:0;
     opacity:0;
+    position:absolute;
     transition:all 0.5s;
     z-index:100;
+}
+.img-cover:hover{
+    opacity:1;    
 }
 .img-cover p{
     font-size:3rem;
@@ -338,15 +301,10 @@ main h2{
     top:50%;
     transform:translate(-50%,-50%);
 }
-.img-cover:hover{
-    opacity:1;    
-}
 .img{
     width:100%;
     height:100%;
     position:absolute;
-    left:0;
-    top:0;
     z-index:90;
 }
 main > section:nth-child(1) .img{
@@ -370,31 +328,29 @@ main > section:nth-child(5) .img{
     background-size:cover;
 }
 .caption-wrap{
-    width:100%;
-    height:135px;
-    margin-top:10px;
+    height:143px;
+    margin-top:13px;
     display:flex;
     flex-direction:column;
     justify-content: space-between;
 }
 .caption-01 p{
+    padding-left:3px;
     line-height:1.5;
     font-size:18px;
-    font-weight:400;
 }
 .caption-02 .tag{
+    margin-top:2px;
     display:flex;
     flex-wrap:wrap;
     align-content:space-between;
-    padding-top:2px;
 }
 .caption-02 .tag span{
     border:1px solid #393E46;
     border-radius:50px;
-    padding:7px 13px;
-    margin:0 5px 7px 0;
+    padding:7px 15px;
+    margin:0 8px 11px 0;
     font-size:14px;
-    font-weight:400;
 }
 .caption-02 .tag span:last-child{
     margin-right:0;
@@ -409,7 +365,7 @@ main > section:nth-child(5) .img{
 .caption-02 button a{
     color:#eee;
     font-size:14px;
-    padding:5px 10px;
+    padding:10px;
     transition:all 0.5s;
 }
 .caption-02 button:hover{
@@ -426,7 +382,7 @@ main > section:nth-child(5) .img{
 }
 @media all and (max-width:650px){
     .img-box{
-        height:38vh;
+        height:390px;
     }
     .img-cover p{
         font-size:2.5rem;
@@ -442,15 +398,12 @@ main > section:nth-child(5) .img{
     .caption-02{
         text-align:right;
     }
-    .caption-02 .tag span{
-        margin-bottom:10px;
-    }
 }
 
 /*------------------------------ .ending ------------------------------*/
 .ending{
-    width:100vw;
-    height:110vh;
+    width:calc(100%);
+    height:calc(110vh);
     background:#222831;
     color:#eee;
     display:flex;
@@ -460,7 +413,6 @@ main > section:nth-child(5) .img{
 }
 .ending > p{
     opacity:0.2;
-    font-family:'indivisible';
     font-weight:800;
     font-size:3rem;
 }
@@ -468,7 +420,6 @@ main > section:nth-child(5) .img{
     font-size:2rem;
     font-weight:500;
     line-height:1.4;
-    margin-bottom:3vw;
 }
 .ending-txt strong{
     color:aquamarine;
@@ -479,7 +430,6 @@ main > section:nth-child(5) .img{
     font-size:1rem;
     font-weight:500;
     line-height:1.5;
-    opacity:1;
 }
 @media all and (max-width:1200px){
     .ending-txt p{
@@ -508,9 +458,8 @@ main > section:nth-child(5) .img{
 
 /*------------------------------ .about ------------------------------*/
 #about{
-    width:100vw;
-    height:92vh;
-    position:relative;
+    width:calc(100%);
+    height:calc(92vh);
     margin-top:0.2vw;
 }
 .idcard{
@@ -519,15 +468,13 @@ main > section:nth-child(5) .img{
     border-radius:1rem;
     box-shadow:2px 2px 8px rgba(0,0,0,0.5);
     text-align:center;
-    position:absolute;
+    position:relative;
     left:50%;
     top:54%;
     transform:translate(-50%, -50%);
     transition:all 0.2s;
 }
 .idcard > h3{
-    display:block;
-    width:100%;
     padding:15px 0;
     border-radius:1rem 1rem 0 0;
     border-bottom:1px solid #000;
@@ -539,11 +486,9 @@ main > section:nth-child(5) .img{
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 .code{
-    width:100%;
     margin-top:13px;
-    padding:0 15px;
     display:flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:center;
 }
 .code li{
@@ -551,7 +496,6 @@ main > section:nth-child(5) .img{
     font-size:0.9rem;
 }
 .id{
-    width:100%;
     padding:15px 20px 17px;
     display:flex;
     justify-content:space-between;
@@ -563,7 +507,7 @@ main > section:nth-child(5) .img{
     border-radius:0.4rem;
     border:1px solid #000;
     background-color:rgba(0,173,181,0.2);
-    padding:2.5% 0;
+    padding:10px 0;
 }
 .emoji > img{
     width:100%;
@@ -571,10 +515,13 @@ main > section:nth-child(5) .img{
 .id-txt{
     width:57%;
     height:210px;
+    display:flex;
+    flex-flow:column wrap;
+    justify-content:space-between;
 }
 .id-txt p:first-child{
+    width:100%;
     padding:10px 7px;
-    margin-bottom:18px;
     border-radius:0.4rem;
     border:1px solid #000;
     background-color:rgba(0,173,181,1);
@@ -582,19 +529,19 @@ main > section:nth-child(5) .img{
     font-size:1.5rem;
     font-weight:900;
     letter-spacing:0.1rem;
-    text-align:center;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 .id-txt p:nth-child(2){
     text-align:left;
     font-size:1.5rem;
     font-weight:500;
-    margin-bottom:14px;
+    padding-left:3px;
 }
 .id-txt .link{
     text-align:left;
+    padding:0 0 5px 4px;
 }
-.id-txt .link li{
+.id-txt .link li:not(:last-child){
     margin-bottom:11px;
 }
 .id-txt .link a{
@@ -610,12 +557,11 @@ main > section:nth-child(5) .img{
         width:350px;
     }
     .idcard > h3{
-        padding:8px 0;
+        padding:9px 0;
         font-size:1.9rem;
     }
     .code{
-        margin-top:7px;
-        padding:0 8px;
+        margin-top:8px;
     }
     .code li{
         font-size:0.5rem;
@@ -624,37 +570,40 @@ main > section:nth-child(5) .img{
         padding:10px 15px 15px;
     }
     .emoji{
-        width:35%;
+        width:37%;
         height:130px;
+        padding:5px 0;
     }
     .id-txt{
-        width:57%;
+        width:59%;
         height:130px;
     }
     .id-txt p:first-child{
         padding:5px;
-        margin-bottom:9px;
         font-size:0.8rem;
         font-weight:900;
     }
     .id-txt p:nth-child(2){
         font-size:1rem;
-        margin-bottom:5px;
+        padding-top:5px;
     }
-    .id-txt .link li{
-        margin-bottom:2.5px;
+    .id-txt .link{
+        text-align:left;
+        padding:0 0 3px 4px;
+    }
+    .id-txt .link li:not(:last-child){
+        margin-bottom:2px;
     }
     .id-txt .link a{
         font-size:0.7rem;
         font-weight:500;
-        padding-top:-3px;
     }
 }
 
 /*------------------------------ #footer ------------------------------*/
 footer{
-    width:100vw;
-    height:9vh;
+    width:calc(100%);
+    height:calc(9vh);
     padding:10px 20px;
     display:flex;
     justify-content:space-between;
@@ -664,9 +613,10 @@ footer{
     font-size:1.2rem;
     font-weight:500;
     color:#393E46;
-    margin-bottom:3px;
+    margin-bottom:4px;
 }
 .point{
+    display:inline-block;
     width:20px;
     height:20px;
     stroke:#393E46;
@@ -677,23 +627,15 @@ footer{
     margin-bottom:-3px;
     margin-left:3px;
 }
-address{
-    font-style:normal;
-}
 address a{
+    font-style:normal;
     font-size:1rem;
     font-weight:400;
     color:#393E46;
 }
-footer .link{
-    margin:15px 0;
-    text-align:right;
-}
 footer .link a{
     font-size:1rem;
-    font-weight:400;
     color:#222831;
-    padding:15px 0;
 }
 footer .link a:hover{
     opacity:0.5;
