--- a/index css/index.css
+++ b/index css/index.css
@@ -56,8 +56,8 @@ a{
     position:fixed;
     top:0;
     left:0;
-    width:calc(100%);
-    height:calc(100vh);
+    width:100%;
+    height:100vh;
     background-image:url(../img/overlay.gif);
     background-size:250px;
     pointer-events: none;
@@ -92,6 +92,7 @@ a{
     transform:translateY(-50%);
 }
 .intro-txt span{
+    opacity: 0;
     font-size:10px;
     margin-right:6px;
 }
@@ -179,8 +180,8 @@ nav li.on:hover a{
 
 /*------------------------------ home ------------------------------*/
 section.home{
-    width:calc(100%);
-    height:calc(100vh);
+    width:100%;
+    height:100vh;
 }
 .home-txt{
     width:718px;
@@ -261,8 +262,8 @@ section.home{
 
 /*------------------------------ main.projects ------------------------------*/
 main{
-    padding:0 20px;
-    margin:150px 0;
+    padding:70px 20px 0;
+    margin:90px 0;
     color:#393E46;
 }
 main > section{
@@ -412,8 +413,8 @@ main > section:nth-child(5) .img{
 
 /*------------------------------ .ending ------------------------------*/
 .ending{
-    width:calc(100%);
-    height:calc(110vh);
+    width:100%;
+    height:110vh;
     background:#222831;
     color:#eee;
     display:flex;
@@ -468,8 +469,8 @@ main > section:nth-child(5) .img{
 
 /*------------------------------ .about ------------------------------*/
 #about{
-    width:calc(100%);
-    height:calc(92vh);
+    width:100%;
+    height:calc(100vh - 80px);
     margin-top:0.2vw;
 }
 .idcard{
@@ -610,11 +611,11 @@ main > section:nth-child(5) .img{
     }
 }
 
-/*------------------------------ #footer ------------------------------*/
+/*------------------------------ footer ------------------------------*/
 footer{
-    width:calc(100%);
-    height:calc(9vh);
-    padding:10px 20px;
+    width:100%;
+    height:80px;
+    padding:0 20px;
     display:flex;
     justify-content:space-between;
     align-items:center;
